Added structure, images and stetup details

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand" href="#page-top">Start Bootstrap</a>
+                <a class="navbar-brand" href="#page-top">Viplav Kadam</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -72,11 +72,15 @@
         <div class="container" id="maincontent" tabindex="-1">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="img/profile.png" alt="">
+                <div class="col-lg-12">
+                    <img class="img-responsive" src="img/ProfileImag.jpeg" alt="">
                     <div class="intro-text">
-                        <h1 class="name">Start Bootstrap</h1>
+                        <h1>Viplav Kadam</h1>
                         <hr class="star-light">
-                        <span class="skills">Web Developer - Graphic Artist - User Experience Designer</span>
+                        <span class="skills">Mobile Developer - Web Developer</span>
+						<div>
+						<span class="skills">vckadam@asu.edu</span>
+						</div>
                     </div>
                 </div>
             </div>
@@ -168,14 +172,14 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
+                    <p>I am a graduate student at Arizona State University. My major is Software Engineering. I pursued Bachelor of Engineering degree from Maharaja Sayajirao University of Baroda with major of Computer Science. I also worked as Asst. System Engineer at Tata Consultancy Services for 2 years.</p>
                 </div>
                 <div class="col-lg-4">
-                    <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
+                    <p>I have a keen interest in mobile as well as web developement. I also did my summer internship with one of the start-up in CA. I worked on hybrid mobile application using React Native. I will graduate in May, 2017. Therefore, I am looking for an entry level software developer position. </p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <a href="#" class="btn btn-lg btn-outline">
-                        <i class="fa fa-download"></i> Download Theme
+                    <a href="https://docs.google.com/document/d/1__oXRlWuWM3mCGx6mMvdjBgh9sNjLLGx2KrfR_PSy24/edit?usp=sharing" class="btn btn-lg btn-outline">
+                        <i class="fa fa-download"></i> Download Resume
                     </a>
                 </div>
             </div>
@@ -244,32 +248,30 @@
                 <div class="row">
                     <div class="footer-col col-md-4">
                         <h3>Location</h3>
-                        <p>3481 Melrose Place
-                            <br>Beverly Hills, CA 90210</p>
+                        <p>1137 East Orange Street
+                            <br>Tempe, AZ 85281</p>
                     </div>
                     <div class="footer-col col-md-4">
                         <h3>Around the Web</h3>
                         <ul class="list-inline">
                             <li>
-                                <a href="#" class="btn-social btn-outline"><span class="sr-only">Facebook</span><i class="fa fa-fw fa-facebook"></i></a>
+                                <a href="http://facebook.com/viplav.kadam" class="btn-social btn-outline"><span class="sr-only">Facebook</span><i class="fa fa-fw fa-facebook"></i></a>
+                            </li>
+                           
+                            <li>
+                                <a href="https://github.com/vckadam" class="btn-social btn-outline"><span class="sr-only">Quora</span><i class="fa fa-fw fa-github"></i></a> 
                             </li>
                             <li>
-                                <a href="#" class="btn-social btn-outline"><span class="sr-only">Google Plus</span><i class="fa fa-fw fa-google-plus"></i></a>
+                                <a href="https://www.linkedin.com/in/viplavkadam" class="btn-social btn-outline"><span class="sr-only">Linked In</span><i class="fa fa-fw fa-linkedin"></i></a>
                             </li>
                             <li>
-                                <a href="#" class="btn-social btn-outline"><span class="sr-only">Twitter</span><i class="fa fa-fw fa-twitter"></i></a>
-                            </li>
-                            <li>
-                                <a href="#" class="btn-social btn-outline"><span class="sr-only">Linked In</span><i class="fa fa-fw fa-linkedin"></i></a>
-                            </li>
-                            <li>
-                                <a href="#" class="btn-social btn-outline"><span class="sr-only">Dribble</span><i class="fa fa-fw fa-dribbble"></i></a>
+                                <a href="https://www.quora.com/profile/Viplav-Kadam" class="btn-social btn-outline"><span class="sr-only">Dribble</span><i class="fa fa-fa fa-quora"></i></a>
                             </li>
                         </ul>
                     </div>
                     <div class="footer-col col-md-4">
-                        <h3>About Freelancer</h3>
-                        <p>Freelance is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>.</p>
+                        <h3>About Portfolio</h3>
+                        <p>Used bootstrap, CSS, Javascript <br> to create the portfolio.</p>
                     </div>
                 </div>
             </div>
@@ -278,7 +280,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        Copyright &copy; Your Website 2016
+                        Copyright &copy; viplav Kadam
                     </div>
                 </div>
             </div>
